# Reckora

./: .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  Dockerfile.web  FE_ROADMAP.md  How to push  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  web.yml
apps/api/reckora_api/: __init__.py  cli.py  config.py  deps.py  main.py
apps/api/reckora_api/access/: __init__.py  repository.py  routes.py
apps/api/reckora_api/activity/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/auth/: __init__.py  models.py  oauth_github.py  oauth_routes.py  passwords.py  repository.py  routes.py  tokens.py
apps/api/reckora_api/collab/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/dossier_status/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/investigations/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/labels/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/mentions/: __init__.py  parser.py  routes.py  schemas.py
apps/api/reckora_api/notes/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/pins/: __init__.py  routes.py
apps/api/reckora_api/reactions/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/settings/: __init__.py  crypto.py  models.py  repository.py  routes.py
apps/api/reckora_api/todos/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/visits/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/watchers/: __init__.py  routes.py  schemas.py
apps/api/reckora_api/xref/: __init__.py  routes.py  schemas.py
apps/web/: .gitignore  index.html  openapi.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/api/: client.ts  schema.gen.ts  types.ts
apps/web/src/components/: Breadcrumbs.tsx  CommandPalette.tsx  EmptyState.tsx  ErrorMessage.tsx  Layout.tsx  LogoMark.tsx  PrivateRoute.tsx  SavedDossierList.tsx  Sidebar.tsx  Skeleton.tsx  Spinner.tsx
apps/web/src/components/Dossier/: AiBlock.tsx  Anchor.tsx  Anomalies.tsx  Avatar.tsx  Brief.tsx  DossierCards.tsx  Edges.tsx  FieldTable.tsx  Section.tsx  Timeline.tsx  TraceCard.tsx  index.ts  sources.ts  types.ts
apps/web/src/components/Phase5/: Activity.tsx  Assignees.tsx  Comments.tsx  Labels.tsx  Notes.tsx  PinToggle.tsx  Status.tsx  Todos.tsx  Watchers.tsx  Xref.tsx
apps/web/src/lib/: auth.tsx  format.ts  toast.tsx
apps/web/src/pages/: Login.tsx  Members.tsx  Mentions.tsx  NewInvestigation.tsx  NotFound.tsx  OAuthCallback.tsx  PinsPage.tsx  SubjectDetail.tsx  SubjectsList.tsx  WatchingPage.tsx
arc-automation-web/: README.md  app.js  index.html  styles.css
deploy/: .env.example  Caddyfile
src/reckora/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py
src/reckora/agent/: __init__.py  loop.py  prompts.py  research.py  tools.py  verifier.py
src/reckora/anomaly/: __init__.py  engine.py  models.py
src/reckora/anomaly/rules/: __init__.py  domain_expiry.py  name_divergence.py  phone_validity.py  temporal.py
src/reckora/auth/: __init__.py  codex_client.py  login.py  oauth.py  pkce.py  server.py  storage.py
src/reckora/collectors/: __init__.py  avatar.py  base.py  breach.py  dns_records.py  doc_leak.py  email.py  github_api.py  gravatar.py  hackernews.py  keybase.py  leak_hunt.py  phone.py  reddit.py  social_presence.py  tiktok.py  wallet_btc.py  wallet_eth.py  wallet_sol.py  web_profile.py  whois_rdap.py  x_twitter.py
src/reckora/correlation/: __init__.py  confidence.py  embeddings.py  engine.py
src/reckora/correlation/rules/: __init__.py  avatar_phash.py  bio_similarity.py  timezone_overlap.py  username_mutation.py
src/reckora/evidence/: __init__.py  anchor.py  archive.py  chain.py  merkle.py  screenshot.py  timestamp.py
src/reckora/graph/: __init__.py  build.py
src/reckora/models/: __init__.py  detect.py  entity.py  enums.py
src/reckora/persistence/: __init__.py  neo4j_repo.py  repository.py  sqlite.py
src/reckora/reasoning/: __init__.py  client.py  hypothesize.py  prompts.py  summarize.py  url_validator.py  web_search.py
src/reckora/reports/: __init__.py  html.py  json_export.py  markdown.py  ndjson.py  pdf.py  timeline.py
src/reckora/timestamp/: __init__.py  merkle.py  ots.py  receipt.py  store.py
tests/: conftest.py  test_agent_loop.py  test_agent_tools.py  test_agent_verifier.py  test_anomaly.py  test_api_activity.py  test_api_auth.py  test_api_cli.py  test_api_collab.py  test_api_comment_editing.py  test_api_comment_reactions.py  test_api_comment_threading.py  test_api_dossier_status.py  test_api_investigations.py  test_api_labels.py  test_api_mentions.py  test_api_notes.py  test_api_oauth_github.py  test_api_pins.py  test_api_rbac.py  test_api_todos.py  test_api_visits.py  test_api_watchers.py  test_api_xref.py  test_auth_cli.py  test_auth_codex_client.py  test_auth_login.py  test_auth_oauth.py  test_auth_pkce.py  test_auth_reasoning_client.py  test_auth_server.py  test_auth_storage.py  test_cli.py  test_collectors_avatar.py  test_collectors_breach.py  test_collectors_dns.py  test_collectors_doc_leak.py  test_collectors_email.py  test_collectors_github.py  test_collectors_gravatar.py  (+48 more)
