[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reckora"
version = "0.1.0"
description = "AI-Native OSINT Investigation System — entity resolution, evidence-graph reasoning, explainable intelligence."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "yowanda" }]
keywords = ["osint", "investigation", "ai", "entity-resolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "httpx>=0.27",
    "networkx>=3.2",
    "openai>=1.30",
    "imagehash>=4.3",
    "pillow>=10.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pillow>=10.0",
    "types-networkx>=3.2",
]

[project.scripts]
reckora = "reckora.cli:app"
reckora-api = "reckora_api.cli:app"

[project.urls]
Homepage = "https://github.com/yowanda/Reckora"
Issues = "https://github.com/yowanda/Reckora/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/reckora", "apps/api/reckora_api"]

[tool.hatch.build.targets.sdist]
include = ["src/reckora", "apps/api/reckora_api", "README.md", "LICENSE", "pyproject.toml"]

# ------------------------------------------------------------------ ruff
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "apps/api", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
]
# We deliberately exclude TCH (flake8-type-checking): Pydantic models need
# their imports available at runtime, so moving them into TYPE_CHECKING
# blocks causes deferred-resolution errors.
ignore = [
    "E501", # line-length is enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "PT011"]
"src/reckora/cli.py" = ["UP007"]  # typer needs Optional / Union for click compat

[tool.ruff.format]
quote-style = "double"

# ------------------------------------------------------------------ mypy
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = false
files = ["src/reckora", "apps/api/reckora_api", "tests"]
mypy_path = "src:apps/api"

[[tool.mypy.overrides]]
module = ["imagehash"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jwt", "jwt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false

# ------------------------------------------------------------------ pytest
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=reckora",
    "--cov=reckora_api",
    "--cov-report=term-missing:skip-covered",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:imagehash.*",
]

[tool.coverage.run]
branch = true
source = ["reckora", "reckora_api"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
